--- a/full-stack.html
+++ b/full-stack.html
@@ -42,11 +42,11 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AmpleInsightInc/743999692429275-backend-fullstack-engineer-remote-'>Ample Insight Inc. Backend/Fullstack Engineer (remote) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AmpleInsightInc/743999692429275-backend-fullstack-engineer-remote-'>Ample Insight Inc. Backend/Fullstack Engineer (remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://learnosity.workable.com/j/8410867F91'>Learnosity - Jobs: Full Stack Engineer - Apply online</a></h5> 
+<h5><a href='https://learnosity.workable.com/j/8410867F91'>Learnosity - Jobs: Full Stack Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -157,7 +157,7 @@ experience - New York, Chicago, or San Francisco in New York, New York.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/smartcar/14d0626c-d288-4607-b2a7-06ab241a7aa4'>Smartcar - Full-Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/smartcar/14d0626c-d288-4607-b2a7-06ab241a7aa4'>Smartcar - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -177,7 +177,7 @@ experience - New York, Chicago, or San Francisco in New York, New York.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NYNYC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -295,7 +295,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -311,7 +311,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -394,7 +394,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -447,7 +447,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692086047-full-stack-net-developer-financial-services'>Vichara Full Stack .NET Developer - Financial Services | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692086047-full-stack-net-developer-financial-services'>Vichara Full Stack .NET Developer - Financial Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
